--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21",
     "request": "^2.87.0"
   }
 }
